--- a/notes-temp/名词.md
+++ b/notes-temp/名词.md
@@ -4,7 +4,7 @@
 
 ### 术语
 on the fly: [相对比较常见的含义是“不经过某种额外步骤而直接进行某项活动”](https://www.zhihu.com/question/21136587)  
-  
+
 
 ### 缩写
 LXC: Linux Container
@@ -12,7 +12,7 @@ LXC: Linux Container
 CE: Community Edition
 EE: Enterprise Edition  
 CLI: CommandLineInterface  
-CI/CD: Continuous Integration and Continuous Deployment
+CI/CD: Continuous Integration and Continuous Deployment/Delivery  
 DevOps Engineer: https://puppet.com/blog/what-a-devops-engineer  
 EC2: Amazon Elastic Compute Cloud  
 
@@ -20,5 +20,3 @@ YAML： yet another Markup language
 
 **command**  
 cd: change directory
-
-
