--- a/notes-temp/名词.md
+++ b/notes-temp/名词.md
@@ -5,6 +5,8 @@
 ### 术语
 on the fly: [相对比较常见的含义是“不经过某种额外步骤而直接进行某项活动”](https://www.zhihu.com/question/21136587)  
 
+### 编程
+ARM: Automatic Resource Management
 
 ### 缩写
 LXC: Linux Container
