--- a/notes-temp/名词.md
+++ b/notes-temp/名词.md
@@ -11,6 +11,7 @@ i18n and L10n: internationalization and localization
 
 intel HAXM: Hardware Accelerated Execution Manager
 
+NAT: Network Address Translation
 
 ### 编程
 ARM: Automatic Resource Management
