--- a/notes-temp/名词.md
+++ b/notes-temp/名词.md
@@ -18,7 +18,7 @@ ARM: Automatic Resource Management
 MOP: Monitoring-Oriented Programming
 SAM: Single Abstract Method
 AST: Abstract Syntax Tree
-
+ABI: Application Binary Interface
 ### 缩写
 LXC: Linux Container
 
