--- a/notes-temp/名词.md
+++ b/notes-temp/名词.md
@@ -18,7 +18,8 @@ ARM: Automatic Resource Management
 MOP: Monitoring-Oriented Programming
 SAM: Single Abstract Method
 AST: Abstract Syntax Tree
-ABI: Application Binary Interface
+ABI: Application Binary Interface  
+PIC: Position Independent Code  
 ### 缩写
 LXC: Linux Container
 
