feat: almost fix nowadays' function. next is updating articles
Signed-off-by: tpout <416756910@qq.com>

--- a/docs/food_book/炸鸡腿.md
+++ b/docs/food_book/炸鸡腿.md
@@ -6,23 +6,23 @@
 放入蒜姜葱沫，倒入酱油酒调味料
 泡几个小时
 
-此时鸡翅湿透，滚一层面粉
-![右边就是腌制的](http://upload-images.jianshu.io/upload_images/1936727-1a289646cfbeb708.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1080/q/50)
+此时鸡翅湿透，滚一层面粉  
+![右边就是腌制的](step1.jpg)
 
-然后在面粉外面再滚一层鸡蛋
-![打散的鸡蛋就行](http://upload-images.jianshu.io/upload_images/1936727-2cefb28f22787e92.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1080/q/50)
-
-----------------------------------------------------------------------
-或者鸡蛋面粉糊成糊，再滚一滚
-![这样感觉更一体](http://upload-images.jianshu.io/upload_images/1936727-e32cf37fba9e5455.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1080/q/50)
+然后在面粉外面再滚一层鸡蛋  
+![打散的鸡蛋就行](step2.jpg)
 
 ----------------------------------------------------------------------
+或者鸡蛋面粉糊成糊，再滚一滚  
+![这样感觉更一体](step3.jpg)
 
-再滚一层面包糠
-![市场里卖调料的地方有买](http://upload-images.jianshu.io/upload_images/1936727-3d42636674cd98ef.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1080/q/50)
+----------------------------------------------------------------------
 
-小火油锅炸至外层金黄色即可
-![这里有点黑了，所以怀疑炸前别腌制](http://upload-images.jianshu.io/upload_images/1936727-0f9c8598271b32ac.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1080/q/50)
+再滚一层面包糠  
+![市场里卖调料的地方有买](step4.jpg)
 
-最后嘛
-![这款有点苦，不好喝](http://upload-images.jianshu.io/upload_images/1936727-e5cb97c128329aa5.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1080/q/50)4
+小火油锅炸至外层金黄色即可  
+![这里有点黑了，所以怀疑炸前别腌制](step5.jpg)
+
+最后嘛  
+![这款有点苦，不好喝](step6.jpg)
