--- a/docs/cs-book/code/代数.md
+++ b/docs/cs-book/code/代数.md
@@ -2,13 +2,20 @@
 逻辑数学  
 代数  
 
-数学基础：  
+#### 数学基础  
+
 加法乘法的交换律、结合律；乘法遵循加法分配律  
+
+#### 代数
 
 传统代数一般指代了一个数字  
 而布尔代数表示的是一种事物种类 ，它的加法，表示并集∪；乘法，表示交集∩；0表示空集，1表示所有的集合  
 
-结合三段论有题目1：  
+摩根定律
+
+#### 三段论
+
+- 有题目1：  
 
 所有人都难逃一死  
 苏格拉底是人  
@@ -24,29 +31,30 @@
 所以苏格拉底和会死的东西的交集是苏格拉底，就是说苏格拉底也会死  
 
 
-经过第1题的锤炼，我们有题目2：
 
-需求  
-一只公猫，绝育的，白色或者褐色都可以；  
-或者母猫，绝育的，不是白色就可以；  
-或者黑猫就行  
+经过第1题的锤炼，我们
 
-对应得出：  
+- 有题目2：
+
+[猫的需求](猫的需求.md) 
+
+每个需求对应得出：  
 M x N x (W + T)  
 F x N x (1 - W)  
 B  
 
 合并条件是：(M x N x (W + T)) + (F x N x (1 - W)) + B  
+
+> 注意这里的 `x` 和 `+` 是规则的进一步简化，  
+> `x` 表示 与，即只有两侧都为“是”时，结果才是“是”   
+>
+> `+`表示 或，即只要两侧有一个为“是”，结果就是“是”  
+>
+> `1-`就是单纯的表示补集  
+
 此时拿到一只 未绝育的褐色公猫，我们根据是否符合来把代数替换成是或否  
 得到条件：(是 x 否 x (否 + 是)) + (否 x 否 x (1 - 否)) + 否  
 
-注意这里的 x 和 + 规则进一步简化，  
-x 表示 与，即只有两侧都为“是”时，结果才是“是”   
-+ 表示 或，即只要两侧有一个为“是”，结果就是“是”  
-- 就是单纯的表示补集  
-
 结果是：= (否 x 是) + (否 x 是) + 否 = 否 + 否 + 否 = 否  
 所以这只猫不符合要求  
-
-这时候你可以再弄一个猫自己看看符合不咯  
 
