--- a/docs/cs-book/code/加法器.md
+++ b/docs/cs-book/code/加法器.md
@@ -64,6 +64,10 @@ s1 和 c1 再用半加器输出，低位s2 即当前位，高位c3 要和 c2 再
 
 把8个锁存器连接起来，就是8位锁存器
 
+
+
+此加法器又称为 **累加器**
+
 #### 类型1
 
 1、加法器 对A输入a数，对B输入b数
@@ -131,3 +135,40 @@ s1 和 c1 再用半加器输出，低位s2 即当前位，高位c3 要和 c2 再
   所以添加一个清零开关，和 D触发器的R输入，经过或门处理，再输入R
 
   如此保证清零开关 为1时，输出 为0
+
+
+
+### 自动加法器
+
+累加器有两缺点，
+
+1. 是某次计算 结果很容易溢出255；
+
+2. 是如果输错一个数，则需要从头到尾再输一遍
+
+
+
+对于2，如果用[RAM](RAM.md) 先存储一遍所有的数，修改时就方便很多了。
+
+然后用RAM 输出还有一个便利，就是数据已经确定，那只需要按顺序寻址就行，
+
+而顺序寻址可以用 [计数器](计数器.md) 自动实现。
+
+
+
+此装置的关键在于替换 累加器输入 为RAM，RAM的自动寻址输入为计数器，
+
+而计数器的时钟位、清零位 又同时可以和 累加器 的时钟位、清零位 共用输入。
+
+> 计数器自然没有清零位，但是为了暂停和重计，加个清零位是必须的，也简单。（具体p218页）
+
+
+
+目前的自动加法器 有两个缺点，
+
+1. 是某次计算 结果很容易溢出255。
+
+2. 是振荡器没法停止，寻址溢出 之后会跳到 地址起点。
+
+
+
