--- a/docs/OnLine_20190901.md
+++ b/docs/OnLine_20190901.md
@@ -1,8 +1,12 @@
-我打开了电脑。  
+从头开始学习软件部分，
 
-我想知道它是怎么被打开的。  
+当然想理解透彻，必须要有笔记，主要是用来以自己的思路重写一些重要部分，
 
-当然学习必须要有笔记，工具：[Markdown](./blog-category/Markdown/Markdown.md)
+笔记工具：[Markdown](./blog-category/Markdown/Markdown.md)
+
+笔记多了还得找个地方存，顺便更新日志做起来，那就 [Git](./blog-category/Git基本使用_20160830.md) 版本控制一下。 
+
+记了笔记还得show 一波啊，不然没有坚持的动力。GitBook 可以快速生成一波组织性静态页面
 
 收集了一些资料： [cs的学习](../drafts/cs-category/learn/Learn-flow.md)
 
