cpp更新至章9, 存档一下
Signed-off-by: lishengjie <416756910@qq.com>

--- a/drafts/language/cpp/Cpp-index_20191014.md
+++ b/drafts/language/cpp/Cpp-index_20191014.md
@@ -1,27 +1,88 @@
 仔细想了一下，c++ 还是以明白为主，不追求使用细节了。
 
-
-
-http://www.research.att.com/-bs
+[作者主页](http://www.research.att.com/-bs) , [c++ faq ](http://www.parashift.com/c++-faq/) \(关掉lantern\)
 
 
 
-类型强转： static_cast<targetType>(srcType)
+因为设计上是想兼容c 的，所以c 中有的就不重复讲了；
+
+几个经常出现的版本，C++ release 2.0 ; C++ 11
+
+
+
+c++ 的main方法，执行完毕默认返回0
+
+c++ 中，头文件（函数定义）和库文件（函数实现）是分开放置的，所以可能你包含了头文件，但是编译还是找不到对应的库文件。
+
+> 在 CMakeLists.txt 中，add_executable 中，如果头文件只有方法声明，可以不包含头文件
+
+
+
+- 表达式语句
+
+  表达式执行会产生值
+
+  ```C++
+  var1 = (var2 = 3) + 2;
+  ```
+
+  - 逗号
+
+    ```C++
+    //逗号表达式也是一个结算点
+    //即逗号之前的 表达式，一定比之后的表达式先执行
+    //逗号表达式的值，是最后的表达式的值
+    int c = (i= 20, j = 30, k = 35);
+    cout << c; //此时c 是35
+    ```
+
+    
+
+- 赋值语句
+
+  产生的值是左操作数的值
+
+- 声明语句
+
+
+
+#### 保留字
+
+```C++
+and or not //c 中需要包含iso646.h
+```
+
+
 
 ```c++
+//C++ 中for循环的 condtion 只要是表达式语句即可
+//现在的for 规则如下，可以不管，原文p130
 for(for-init-statement condition ; expression){
     statement;
 }
+//foreach, c++ 11
+for(double x : prices) 
+for(double &x : prices)
+for(double x : {1.0, 2.0, 3.0})
 ```
 
-```c++
-cout << R"+*("(Who wouldn't?)", she whispered.)+*" << endl
-```
+
+
+计时：
+
+函数名clock()，返回程序开始执行后 流逝的系统时间
+
+但是返回值不一定是秒，而且可能是long， unsigned long 或其他
+
+ctime， 流逝的系统时间 / CLOCKS_PER_SEC = 流逝的秒数
+
+
+
+如果选项超过2个，在switch 支持的情况下，应当优先使用switch 而不是 if else
 
 ```c++
-++type ; type++
-如果是自定义类型type， type++ 会先复制一个type，然后type+1，并返回；
-比 ++type 的效率略低
+goto label;
+lable: cout << ...
 ```
 
 
@@ -29,8 +90,6 @@ cout << R"+*("(Who wouldn't?)", she whispered.)+*" << endl
 
 
 第一遍没有透彻的部分
-
-p291 - 296
 
 p463 - 476 
 
