--- a/drafts/language/cpp/常用库.md
+++ b/drafts/language/cpp/常用库.md
@@ -1,16 +1,10 @@
-ctime
+### ctime
 
 CLOCKS_PER_SEC，
 
-while(cin)
-
-while(cin.get(ch))
-
-while(cin.fail())
-
-cin.get() != EOF
 
 
 
-ctrl+z, ctrl+d, enter 模拟文件尾
+
+
 
