--- a/drafts/language/cpp/Cpp-index_20191014.md
+++ b/drafts/language/cpp/Cpp-index_20191014.md
@@ -87,6 +87,28 @@ lable: cout << ...
 
 
 
+cv 限定符（const， volatile）：volatile 告诉编译器，变量可能实时变化，不要进行“缓存”优化，每次都要读取最新值。
+
+mutable：结构变量为const 时，指出某个变量有特权，可以被修改
+
+
+
+一切都遵循单定义原则，而内联函数例外，但是也要定义相同。
+
+> 意思就是不需要ifndef 来限定，头文件中定义好，其他文件都包含这个头文件即可。而不是在多个头文件中分别复制一份。
+>
+> 但是和ifndef 不冲突，没必要单独来记忆了。
+
+
+
+```c++
+//头文件cstdlib，c++11中头文件random有更强的实现
+rand() //伪随机数
+srand() //可以传入种子
+//头文件ctime
+time(0) //返回当前时间
+```
+
 
 
 第一遍没有透彻的部分
