--- a/drafts/language/cpp/type/引用变量.md
+++ b/drafts/language/cpp/type/引用变量.md
@@ -1,6 +1,9 @@
 ```c++
 int rats;
 int & rodents = rats; //复制一份引用，作为别名，但是两者指向相同的值和内存，互相影响修改
+//数组引用
+int a[] = {};
+int (&b)[0] = a;
 ```
 
 引用初始化时必须赋值，此时包括值和地址，而之后不能改变地址。只能赋值
