更新至章14，好像说这种书真的是废话多。。。但是又不敢跳着看。。
Signed-off-by: lishengjie <416756910@qq.com>

--- a/drafts/language/cpp/type/class/运算符重载-友元函数.md
+++ b/drafts/language/cpp/type/class/运算符重载-友元函数.md
@@ -48,6 +48,10 @@ ostream & operator<<(ostream &cout, Lsj &lsj){
   return cout;
 }
 
+//特别展示一个操作符[]重载，实现无法修改的例子
+const Type *operator[]() const{
+  ...
+}
 ```
 
 重载操作符不能修改原先的句法规则，有些运算符不能重载
