18章之后迅速阅览，算是完结。下一步，找两个项目搞一下。再结合c的整理一遍
Signed-off-by: lishengjie <416756910@qq.com>

--- a/drafts/language/cpp/type/class/特殊成员函数.md
+++ b/drafts/language/cpp/type/class/特殊成员函数.md
@@ -44,6 +44,10 @@ Class_name & Class_name::operator=(const Class_name &);
 
 #### 移动构造函数（move constructor）
 
+类似复制构造函数，但是不保证参数 不被修改
+
+可以用于编译器优化性能
+
 
 
 #### 移动赋值运算符（move assignment operator）
