--- a/drafts/language/cpp/type/字符串.md
+++ b/drafts/language/cpp/type/字符串.md
@@ -38,5 +38,10 @@ char * temp = “tempString”;
 mate == "string value"; //此时比较的是两者的地址
 ```
 
+#### string
 
+实际上是 basic_string<charT, traits<>, allocator<>> 的一个typedef，charT表示类字符，traits提供了比较规则，aloocator 是内存分配的类。
 
+string::npos 是字符串最大长度，一般是unsigned int 的最大值。
+
+![image-20191104162733145](image-20191104162733145.png)
