c++ primer 18章后续完善
Signed-off-by: lishengjie <416756910@qq.com>

--- a/MyDocs/language/cpp/type/class/特殊成员函数.md
+++ b/MyDocs/language/cpp/type/class/特殊成员函数.md
@@ -1,8 +1,15 @@
 定义类要注意复制构造函数和赋值构造函数的浅复制，可以将其设置为private，禁止使用
 
-除了默认构造和默认析构函数，还有
+除了默认构造和默认析构函数，还有如下几个，编译器都会提供默认的实现。
 
-**复制构造函数**
+```c++
+//如果方法声明而没有实现，可以使用default 来表明使用编译器声明的，只能用于特殊成员函数
+Lsj() = default;
+```
+
+
+
+#### 复制构造函数
 
 如果程序中没用到复制构造函数的地方，编译器只会提供原型，而不会对其定义
 
@@ -20,7 +27,9 @@ Class_name(const Class_name &);
 //默认执行 浅复制（可能造成多次释放指针的问题）
 ```
 
-**赋值运算符**
+
+
+#### 赋值运算符
 
 要合理区分初始化和赋值
 
@@ -38,16 +47,41 @@ Class_name & Class_name::operator=(const Class_name &);
 
 定义复制函数的时候，要注意避免自己赋值给自己；同时要注意清除原先存在的内存分配；
 
-**地址运算符**
+
+
+#### 地址运算符
 
 和常规一样，返回地址
 
+
+
 #### 移动构造函数（move constructor）
 
-类似复制构造函数，但是不保证参数 不被修改
+类似复制构造函数，参看 [引用-移动语义](../refrence-variable.md#移动语义)，但是不保证参数 不被修改，所以不能用const
 
-可以用于编译器优化性能
+可以用于编译器优化性能，减少临时变量的创建（优秀的编译器不定义也有相同的效果）
+
+默认实现等同于复制构造。
 
 
 
 #### 移动赋值运算符（move assignment operator）
+
+同样的移动语义，可以使用在赋值构造函数里
+
+```c++
+operator=(Lsj &&);
+```
+
+
+
+```c++
+//有了移动相关的函数之后，可以在传值的时候强制将对象转化成右值
+Lsj lsj[10];
+Lsj lsj1;
+int index = 1;
+lsj1 = lsj[index]; //常规情况是复制赋值
+lsj1 = static_cast<Lsj &&> lsj[index]; //强转
+std::move(lsj[index]) //c++11, 前提是有移动赋值函数，否则调用复制赋值，再否则不允许
+```
+
