--- a/MyDocs/language/cpp/type/class/继承-更多.md
+++ b/MyDocs/language/cpp/type/class/继承-更多.md
@@ -50,7 +50,7 @@ Lsj : Human(name), BaseSjl(name, age), BaseLsj(name, age)
 
 如果虚基类和非虚基类多继承，则虚基类合并，非虚基类保持多个副本。
 
-#### 方法透传
+#### 透传
 
 当你只是单纯的使用基类的方法，而没有添加多余操作
 
@@ -62,5 +62,7 @@ class Lsj{
   //showName 没有圆括号、函数特征和返回，相关的方法都会被透传
       using BaseLsj::showName; 
   //古老的语法中，不需要using 关键字，但是已经废弃
+  
+  using BaseLsj::BaseLsj; //会透传所有的构造函数
 }
 ```
