--- a/MyDocs/language/cpp/type/class/继承.md
+++ b/MyDocs/language/cpp/type/class/继承.md
@@ -55,6 +55,7 @@ class Lsj: public BaseLsj{
   public:
   void coutInt(); //基类的coutInt(int)会被隐藏，即你无法从派生类调用
   //所以不想有意外，同名方法都要实现
+  virtual void coutInt() const override{}; //用override表达意图，则会报错
 }
 ```
 
@@ -69,6 +70,11 @@ class Lsj: public BaseLsj{
   public:
   Lsj & coutInt(int); //和基类方法标示一样，但是返回派生类，不影响
 }
+```
+
+```c++
+//方法禁止覆盖
+virtual void f() const final{};
 ```
 
 
