bird-pridish 十三章之后略读，暂时用不着
Signed-off-by: lishengjie <416756910@qq.com>

--- a/drafts/cs-book/bird-pridish/vim_20170504.md
+++ b/drafts/cs-book/bird-pridish/vim_20170504.md
@@ -1,12 +1,12 @@
-主要是对命令的再梳理，主要来自 “vimtutor” 和《鸟哥私房菜》。
+对命令的再梳理，主要来自 “vimtutor” 和《鸟哥私房菜》。
 
-20200109修改
+20200109修改，第二次
 
 #### 基本概念：
 
 - 命令(command)模式
 - 编辑(insert)模式
-- 可视（Visual）模式
+- 可视(Visual)模式
 - 命令行(command-line)模式
 
 命令模式可以通过 [i, I, o, O, a, A, r, R] 转化为编辑模式，Esc 反之
@@ -25,7 +25,7 @@
 
 `<Space>、<Enter> ` 等首字母大写的表示键盘上的按键
 
-`(string)` 表示输入的字符串，`(n)` 表示输入的数字
+`(s)` 表示输入的字符串，`(n)` 表示输入的数字
 
 #### 命令模式：
 
@@ -48,26 +48,37 @@
 | H （当前屏幕的第一行的起始）                          | M （当前屏幕中间行的起始）  | L （当前屏幕最后一行的起始）                |                     |
 | ctrl+f  (下翻页, PageDown）                           | ctrl+b（上翻页，PageUp）    | ctrl+d （下翻半页）                         | ctrl+u （上翻半页） |
 | **file**                                              |                             |                                             |                     |
-| G （文件的末尾）                                      | (n)G （移动到文件的第n 行） | gg （移动到文件的起始，1G）                 |                     |
+| G （文件的末尾）                                      | (n)G （移动到文件的第n 行） | gg （移动到文件的起始，等同1G）             |                     |
+| **jump**                                              |                             |                                             |                     |
+|                                                       |                             |                                             |                     |
+|                                                       |                             |                                             |                     |
+| %（跳转到对应的大中小括号）                           |                             |                                             |                     |
+
+- Ctrl+G （显示当前行位置和文件状态）
+- CTRL+O （跳转命令模式上次所处的位置）  CTRL+I （跳转到新的位置）
 
 **编辑**
 
-| edit                                      |                                   |                      |      |
-| ----------------------------------------- | --------------------------------- | -------------------- | ---- |
-| **char**                                  |                                   |                      |      |
-| (n)<edit.char> （执行n 次char 操作）      |                                   |                      |      |
-| x （向后删除一个字符, Del）               | X （向前删除一个字符，Backspace） |                      |      |
-| **line**                                  |                                   |                      |      |
-| dd （删除行）                             | (n)dd                             | d(n)d                |      |
-| d<move.file> （删除光标所在到对应的位置） | d<move.line>                      | d<move.direction>    |      |
-| yy （复制行）                             | (n)yy                             |                      |      |
-| y<move.file>                              |                                   |                      |      |
-| p （在光标下一行黏贴复制内容）            | P（在光标上一行黏贴复制内容）     |                      |      |
-| J （合并当前行和下一行内容）              |                                   |                      |      |
-|                                           |                                   |                      |      |
-| **toEdit**                                |                                   |                      |      |
-| u （撤销上一个操作）                      | ctrl+r （恢复上一个操作）         | . （重复上一个操作） |      |
-| U （恢复行的原始状态）                    |                                   |                      |      |
+| operator                             |                                   |                                           |      |
+| ------------------------------------ | --------------------------------- | ----------------------------------------- | ---- |
+| **char**                             |                                   |                                           |      |
+| x （向后删除一个字符, Del）          | X （向前删除一个字符，Backspace） |                                           |      |
+| (n)<edit.char> （执行n 次char 操作） |                                   |                                           |      |
+| **word, line, file**                 |                                   |                                           |      |
+| d (删除，需要组合)                   |                                   |                                           |      |
+| dd （删除行）                        | (n)dd                             | d(n)d                                     |      |
+| d<move.direction>                    | d<move.line>                      | d<move.file> （删除光标所在到对应的位置） |      |
+| y (复制，需要组合)                   |                                   |                                           |      |
+| yy （复制行）                        | (n)yy                             |                                           |      |
+|                                      |                                   | y<move.file>                              |      |
+| p （在光标下一行黏贴复制内容）       | P（在光标上一行黏贴复制内容）     |                                           |      |
+| J （合并当前行和下一行内容）         |                                   |                                           |      |
+|                                      |                                   |                                           |      |
+| **to<edit>**                         |                                   |                                           |      |
+| u （撤销上一个操作）                 | ctrl+r （恢复上一个操作）         | . （重复上一个操作）                      |      |
+| U （恢复行的原始状态）               |                                   |                                           |      |
+
+d 是一个操作，他可以跟操作对象--动作（motion），动作包括w, e, $，0。动作前，输入数字(n)，会让动作重复执行n 次。
 
 dd 操作之后，内容会被存储，可以使用p 进行黏贴
 
@@ -95,36 +106,39 @@ dd 操作之后，内容会被存储，可以使用p 进行黏贴
 | **operator**                  |                |              |      |
 | d （删除选中）                | y （复制选中） | p (粘贴选中) |      |
 
-
-
 #### 命令行模式
 
 为了方便，把进入模式的触发字符也算在命令行里了
 
 w 是write ，q 表示quit
 
-| search                                                       |                              |                    |                   |
-| ------------------------------------------------------------ | ---------------------------- | ------------------ | ----------------- |
-| /(string) （从光标往下搜索）                                 | ?(string) （从光标往上搜索） |                    |                   |
-| n （重复一次之前的搜索）                                     | N （重复一次反向搜索）       |                    |                   |
-| **replace**                                                  |                              |                    |                   |
-| :(num1),(num2)s/(oldString)/(newString)/gc （在num1行和num2行之间查找oldString，并替换为newString） |                              |                    |                   |
-| **append**                                                   |                              |                    |                   |
-| :r (string) （读取文件内容，并追加到光标之下）               | :r<shellCommand>             |                    |                   |
-| **save**                                                     |                              |                    |                   |
-| :[(n1),(n2)] w [fileNameString]（将n1,n2行之间的内容写入硬盘文件） | :w! （强制写入）             |                    |                   |
-| **quit**                                                     |                              |                    |                   |
-| :q （离开）                                                  | :q! （强制离开，不保存）     |                    |                   |
-| ZZ （文件如有改动，存储后离开）                              |                              |                    |                   |
-| **config**                                                   |                              |                    |                   |
-| :set nu （显示行号）                                         | :set nonu （取消行号）       |                    |                   |
-| **shellCommand**                                             |                              |                    |                   |
-| :! <shellCommand> （显示shellCommand 的结果）                |                              |                    |                   |
-|                                                              |                              |                    |                   |
-| **help**                                                     |                              |                    |                   |
-| F1                                                           | Ctrl + W Ctrl + W            |                    |                   |
-| :help                                                        |                              |                    |                   |
-| :help w                                                      | :help c_Ctrl_D               | :help insert-index | :help user-manual |
+| search                                                       |                          |                    |                   |
+| ------------------------------------------------------------ | ------------------------ | ------------------ | ----------------- |
+| /(s) （从光标往下搜索）                                      | ?(s) （从光标往上搜索）  |                    |                   |
+| /(string)\c （查找时忽略大小写）                             |                          |                    |                   |
+| n （重复一次之前的搜索）                                     | N （重复一次反向搜索）   |                    |                   |
+| **replace**                                                  |                          |                    |                   |
+| :(nStart),(nEnd)s/(sOld)/(sNew)/gc （在nStart行和nEnd行之间查找sOld，并替换为sNew） |                          |                    |                   |
+| **append**                                                   |                          |                    |                   |
+| :r (s) （读取文件内容，并追加到光标之下）                    | :r<shellCommand>         |                    |                   |
+| **save**                                                     |                          |                    |                   |
+| :[(nStart),(nEnd)] w [sFileName]（将nStart,nEnd行之间的内容写入硬盘文件） | :w! （强制写入）         |                    |                   |
+| **quit**                                                     |                          |                    |                   |
+| :q （离开）                                                  | :q! （强制离开，不保存） |                    |                   |
+| ZZ （文件如有改动，存储后离开）                              |                          |                    |                   |
+| **config**                                                   |                          |                    |                   |
+| :set nu （显示行号）                                         | :set nonu （取消行号）   |                    |                   |
+| :syntax on （语法高亮）                                      |                          |                    |                   |
+| :set ic (忽略大小写)                                         | :set noic                |                    |                   |
+| :set hls is （高亮）                                         | :nohlsearch              |                    |                   |
+| :set all （查看可以配置的命令）                              |                          |                    |                   |
+| **shellCommand**                                             |                          |                    |                   |
+| :! <shellCommand> （显示shellCommand 的结果）                |                          |                    |                   |
+| **help**                                                     |                          |                    |                   |
+| :(s) Ctrl+D TAB （命令补全）                                 |                          |                    |                   |
+| F1                                                           | Ctrl + W Ctrl + W        |                    |                   |
+| :help                                                        |                          |                    |                   |
+| :help w                                                      | :help c_Ctrl_D           | :help insert-index | :help user-manual |
 
 - 搜索命令在`/(string)` 且按下回车后才算完成，用于确认`string`，再按n、N 才会生效 
 
@@ -134,40 +148,22 @@ w 是write ，q 表示quit
 
 - <save><quit> 可以组合使用，如`:wq, :wq!`
 
+- <config>命令可以在`.vimrc` 中使用`set <config>` 来配置
 
+| multifile |      |
+| --------- | ---- |
+| :files    |      |
+| :n        | :N   |
 
-vimtuor:
+| multiwindow    |      |
+| -------------- | ---- |
+| :sp[sFileName] |      |
 
-d 是一个操作，他可以跟操作对象--动作（motion），动作包括w, e, $，0
+Ctrl + W （进入窗口切换状态，再按<move.direction>切换窗口）
 
-动作前，输入数字(num)，会让它重复（num motion）
-
-d num motion
-
-
-
-j$, (j 当做操作符)
-
-yw （y 当做操作符）
-
-| **jump**                              |                           |                                  |      |      |
-| ------------------------------------- | ------------------------- | -------------------------------- | ---- | ---- |
-| CTRL+O （跳转命令模式上次所处的位置） | CTRL+I （跳转到新的位置） |                                  |      |      |
-| Ctrl+G （显示当前行位置和文件状态）   |                           |                                  |      |      |
-| %（跳转到对应的大中小括号）           |                           |                                  |      |      |
-| **search**                            |                           |                                  |      |      |
-|                                       |                           | /(string)\c （查找时忽略大小写） |      |      |
-| :set ic (忽略大小写)                  | :set noic                 |                                  |      |      |
-| :set hls is （高亮）                  | :nohlsearch               |                                  |      |      |
-| **operator**                          |                           |                                  |      |      |
-|                                       |                           | c、C                             |      |      |
-|                                       |                           |                                  |      |      |
-| **help**                              |                           |                                  |      |      |
-|                                       |                           |                                  |      |      |
-|                                       |                           |                                  |      |      |
-|                                       |                           |                                  |      |      |
-| 命令补全                              |                           |                                  |      |      |
-| :(string) Ctrl+D TAB                  |                           |                                  |      |      |
+| autocomplete                                                 |      |
+| ------------------------------------------------------------ | ---- |
+| Ctrl + X<br />（进入自动补全状态，<br />再按ctrl + n 从文件内容中查找补全对象；<br />再按ctrl + f 从当前目录文件名中查找补全对象<br />再按ctrl + o 以文件拓展名作为类型，从vim 内置的关键词中查找补全对象） |      |
 
 vimrc 示例文件 `$VIMRUNTIME/vimrc_example.vim`
 
