鸟哥私房菜 简单整理
Signed-off-by: lishengjie <416756910@qq.com>

--- a/MyDocs/blog-category/vim_20170504.md
+++ b/MyDocs/blog-category/vim_20170504.md
@@ -50,8 +50,6 @@
 | **file**                                              |                             |                                             |                     |
 | G （文件的末尾）                                      | (n)G （移动到文件的第n 行） | gg （移动到文件的起始，等同1G）             |                     |
 | **jump**                                              |                             |                                             |                     |
-|                                                       |                             |                                             |                     |
-|                                                       |                             |                                             |                     |
 | %（跳转到对应的大中小括号）                           |                             |                                             |                     |
 
 - Ctrl+G （显示当前行位置和文件状态）
@@ -171,9 +169,7 @@ vimrc 示例文件 `$VIMRUNTIME/vimrc_example.vim`
 
 资源：
 
-《vim - vi improved》
-
-steve oualline
+《vim - vi improved》 -- steve oualline
 
 
 
