设计模式-部分
Signed-off-by: lishengjie <416756910@qq.com>

--- a/MyDocs/cs-book/鸟哥私房菜/bash_20200117.md
+++ b/MyDocs/cs-book/鸟哥私房菜/bash_20200117.md
@@ -393,6 +393,14 @@ MAC（Mandatory Access Control）委托式
 
 
 
+`md5sum`
+
+`sha1sum`
+
+`sha256sum`
+
+
+
 **计划服务**
 
 `at` 只执行一次，需要atd 服务，/var/spool/at，/etc/at.allow, /etc/at.deny
