fix: marked ``块、>注释 没有渲染背景的问题
Signed-off-by: lishengjie <416756910@qq.com>

--- a/MyDocs/OnLine_20190901.md
+++ b/MyDocs/OnLine_20190901.md
@@ -6,9 +6,13 @@
 
 笔记多了还得找个地方存，顺便更新日志做起来，那就 [Git](./blog-category/Git基本使用_20160830.md) 版本控制一下。 
 
-记了笔记还得show 一波啊，不然没有坚持的动力。[GitBook](https://github.com/GitbookIO/gitbook/blob/master/docs/setup.md) 可以快速生成一波组织性静态页面，但是后来简单完善了后台输出逻辑，感觉gitbook 有点累赘，写文档之后再生成一份？
+记了笔记还得show 一波啊，不然没有坚持的动力。
+- `GitBook` 可以快速生成一波组织性静态页面，但是后来简单完善了后台输出逻辑，感觉gitbook 有点累赘  
+- 现在的结构还是直接保存文档，后台输出的时候，js 用`markd` 库直接渲染一波
 
-收集了一些资料： [cs的学习](../drafts/cs-category/learn/Learn-flow.md)
+收集了一些cs 资料，但是毕竟被叫做科学，不做好路线规划，容易迷失。  
+为了更好的表现一个学习的顺序，思前想后，唯有Android 适合（嘿嘿，  
+  
 
 
 
