--- a/MyDocs/OnLine_20190901.md
+++ b/MyDocs/OnLine_20190901.md
@@ -1,4 +1,4 @@
-从头开始学习软件部分，
+从头开始学习，  
 
 当然想理解透彻，必须要有笔记，主要是用来以自己的思路重写一些重要部分，
 
@@ -8,12 +8,37 @@
 
 记了笔记还得show 一波啊，不然没有坚持的动力。
 - `GitBook` 可以快速生成一波组织性静态页面，但是后来简单完善了后台输出逻辑，感觉gitbook 有点累赘  
-- 现在的结构还是直接保存文档，后台输出的时候，js 用`markd` 库直接渲染一波
+- 现在的结构还是直接保存文档，后台输出的时候，js 用[marked](./blog-category/marked_20200522.md) 库直接渲染一波
 
 收集了一些cs 资料，但是毕竟被叫做科学，不做好路线规划，容易迷失。  
-为了更好的表现一个学习的顺序，思前想后，唯有Android 适合（嘿嘿，  
-  
+
+为了更好的表现一个学习的顺序，思前想后，  
+唯有[Android](./android/android-index.md) 呈用户交互，启硬件操作（嘿嘿，  
+
+深入android中，再浅出cs    
 
 
 
 
+附[程序员誓言](https://blog.cleancoder.com/uncle-bob/2015/11/18/TheProgrammersOath.html):
+ 
+ 为了捍卫和维护计算机程序员的职业荣誉，我承诺，尽我所能和判断力：
+ 
+ 1、我不会产生有害的代码。
+ 
+ 2、我制作的代码永远是我最好的作品。我不会故意允许在行为或结构上有缺陷的代码。
+ 
+ 3、每次发布时，我都会生成一个快速、可靠、可重复的证据，证明代码的每个元素都应该正常工作。
+ 
+ 4、我将经常发布小版本，这样我就不会妨碍其他人的进展。
+ 
+ 5、我会抓住每一个机会，无畏地，不懈地改进我的代码。我永远不会损害它们。
+ 
+ 6、我将尽我所能保持自己和他人的生产力。我不会做任何降低生产力的事情。
+ 
+ 7、我将继续确保支持其他人的工作，并且他们也可以支持我的工作。
+ 
+ 8、我将对幅度和精度做出诚实的估计。我不会作出做不到的诺言。
+ 
+ 9、我将永远不会停止学习和改进我的手艺。
+ 
