--- a/MyDocs/android/app/optimize/相册读取优化.md
+++ b/MyDocs/android/app/optimize/相册读取优化.md
@@ -1,23 +1,34 @@
-cursor 获取排序  
-获取exif 信息来旋转图片角度  
-```kotlin
-class Adapter{
-    var uiScope(Dispatchers.main);
-   
-    fun onViewHolder{
-         // 运行之前
-        uiScope.launch{
-             // 运行之后
-            val job = aync(Dispatchers.IO){
-                // 读取开始
-                readexif()
-                // 读取结束
-            }   
-            job.await()
-            // 读取完毕
-        }
-    }
-}
-// 读取文件exif 大概要600ms
-```
+场景：
+
+cursor 请求所有外部存储图片  
+
+实现基本：
+
+页面加载开始的时候，创建loaderManager，它内部开始查询，然后会在结束的时候回调结果。
+
+结果进行相册列表 细分和排序
+
+再列表中每个viewHolder 会去查exif 信息，获取结果后旋转imageView 并展示
+
+现象：
+
+在Nexus6 , android 6.0 上发现大部分时候加载速度很慢  
+
+反复打开测试，系统性能是一部分原因。但是卡的时候：
+
+查询用1.5~2s 多（不卡少于 500ms）
+
+结果处理几ms
+
+查询 exif 500~700ms
+
+
+
+最开始是想系统卡，那么这部分肯定动不了，第一时间觉得要提前加载，就把loadManager 放到打开相册时进行加载   
+
+节省了点击 到resume 大约1s   
+
+后来同事提醒说改一下查询字段。当然字段都是必须的，删不掉。只是在看字段的时候看到了拍照时间的获取，那这里其实已经获取了exif 的信息。那viewHolder 里exif 的旋转信息，其实也可以在cursor 里一起查询。所以加了一个字段又节省了 exif 查询的600 ms
+
+
 
