fix: code 的部分跳转
Signed-off-by: tpout <416756910@qq.com>

--- a/MyDocs/cs/book/Code/加法器.md
+++ b/MyDocs/cs/book/Code/加法器.md
@@ -16,7 +16,7 @@
 
 其结果的进位，输入输出和 与门 相同。
 
-但是低位的输入输出，和 [异或门](电路升级2.md) 相同
+但是低位的输入输出，和 [异或门](./电设备/电路升级2.md) 相同
 
 然后这两个门进行组合，可以实现一位的加法，而这个组合成的叫做 **半加器**
 
@@ -60,7 +60,7 @@ s1 和 c1 再用半加器输出，低位s2 即当前位，高位c3 要和 c2 再
 
 已经满足了两个数之间的加减法，但是如果有多个数需要计算，总不能依次记住每次计算的结果吧。
 
-此时需要一个存储器记录每次加减法的结果，[锁存器](电路升级3,md)符合需求
+此时需要一个存储器记录每次加减法的结果，[锁存器](./电设备/电路升级3.md)符合需求
 
 把8个锁存器连接起来，就是8位锁存器
 
@@ -106,7 +106,7 @@ s1 和 c1 再用半加器输出，低位s2 即当前位，高位c3 要和 c2 再
 
 - 关于 B 端 同时作为初始数据的输入入口，又作为锁存器数据的输入入口
 
-  实现的关键在于[2-1选择器](电路升级4.md)
+  实现的关键在于[2-1选择器](./电设备/电路升级4.md)
 
 #### 类型2
 
