edu: 数学_初一下
Signed-off-by: tpout <416756910@qq.com>

--- a/MyDocs/edu/初中/数学/初一上.md
+++ b/MyDocs/edu/初中/数学/初一上.md
@@ -8,7 +8,7 @@
 >
 > 倒数、
 >
-> 乘方：幂、底数、指数 -- 底数的次幂、底数的次方；科学计数法 
+> 乘方：幂、底数、指数 -- 底数的次幂（表结果）、底数的次方（表过程）；科学计数法 
 >
 > 准确数、近似数
 
@@ -48,7 +48,7 @@ $$
 
 一元一次方程：
 
-> 未知数、解（根）
+> 等式、未知数、解（根）
 >
 > 移项、
 
