数学到9年级下
Signed-off-by: tpout <416756910@qq.com>

--- a/MyDocs/edu/数学_数形-总结/方位.md
+++ b/MyDocs/edu/数学_数形-总结/方位.md
@@ -1,4 +1,4 @@
-### 一年级上
+###  一年级上
 
 **上下左右前后**
 
@@ -16,7 +16,11 @@
 
 北偏南$30^\circ$ 
 
+### 七年级上
 
+北偏东30度（一般不说东偏北）；南偏西50度（一般不说西偏南）
 
+### 八年级上
 
+有序数对(12,8)
 
