高中数学第一章
Signed-off-by: 李圣杰 <lishengjie@lishengjiedeMacBook-Pro.local>

--- a/MyDocs/edu/数学_数形-总结/0数-0-通用.md
+++ b/MyDocs/edu/数学_数形-总结/0数-0-通用.md
@@ -14,7 +14,7 @@
 
 - 数量符号：$\frac{2}{5}, 3, 1.\overset{·}4\overset{·}2, π, a,x$ 等
 - 运算符号：如$+ - \times \div :(比) ,\sqrt{a}, \sqrt[3]{a}$ （a不算符号，是为了让根号好看一点）
-- 关系符号：$=, \ne, \approx, >, <, //, \bot$
+- 关系符号：$=, \ne, \approx, >, <, //, \perp$
 - 综合符号：$()$ （圆括号），$[]$ （方括号）
 - 性质符号：$\pm$ （正负号），$| |$ （绝对值符号）
 - 省略符号：$\triangle$ （三角形），$\because$（因为 ）， $\therefore$（所以）
