--- a/MyDocs/edu/数学_数形-总结/1图形-0-基础.md
+++ b/MyDocs/edu/数学_数形-总结/1图形-0-基础.md
@@ -51,7 +51,7 @@
 
     - 两条直线相交成直角，就说这两条直线**互相垂直**，其中一条直线叫作另一条直线的**垂线**，这两条直线的交点叫作**垂足**（一般用O表示）。记作$a\perp b$，读作a 垂直于b（4年级上）
 
-        > 当两条直线相交所构成的四个角中有一个是直角时.... 记作$AB \bot CD$ 或者$m \bot l$  (7年级上)
+        > 当两条直线相交所构成的四个角中有一个是直角时.... 记作$AB \perp CD$ 或者$m \perp l$  (7年级上)
 
     - 从直线外一点到这条直线的垂线段的长度，叫做**点到直线的距离**（7年级上）
 
@@ -116,6 +116,8 @@
 
 如果两个锐角的和是一个直角，我们就说这两个角**互为余角**，简称互余，也可以说其中一个角是另一个角的余角。如果两个角的和是一个平角，我们就说这两个角**互为补角**，简称互补，也可以说其中一个角是另一个角的补角。（7年级上）
 
+> 坡面的倾斜角叫作坡角
+
 **运算**（7年级上）
 
 - 如果两个角的度数相等，我们就说这两个角相等，记作$\angle B = \angle C$（大小类似，转换为角度比较）
@@ -131,7 +133,7 @@
 
 
 
-### 线角
+### 线与角
 
 ##### 定义（7年级下）
 
@@ -175,6 +177,10 @@
 在解决几何问题时，有时需要添加辅助线，添辅助线的过程要写入证明中，辅助线通常画成虚线。（8年级上）
 
 能够重合的两个图形称为**全等图形**（8年级上）
+
+
+
+对于一种几何图形或几何图形之间的关系，可以通过充要条件给出它的等价定义，通过充分条件给出它的判定定理，通过必要条件给出它的性质定理。（10年级上）
 
 #### 弓形
 
