--- a/MyDocs/edu/数学_数形-总结/1图形-2-立体.md
+++ b/MyDocs/edu/数学_数形-总结/1图形-2-立体.md
@@ -24,11 +24,23 @@
 
   简称圆柱。圆柱是由3个面围成的。上、下两个面叫作**底面**，周围的面（上下底面除外）叫作**侧面**。两个底面圆心之间的距离叫作**高**（6年级下）
 
+  圆柱可以看作由一个矩形（ABCD）饶它的一条边（BC）旋转一周，其余各边所成的面围成的几何体。那么AB、CD旋转所成的面就是圆柱的两个**底面**，是两个半径相同的圆，AD 旋转所成的面就是圆柱的**侧面**，AD 不论转动到哪个位置，都是圆柱的**母线**（9年级下）
+
 - 圆锥体
 
   简称圆锥。圆锥的底面是一个圆，侧面是曲面。从圆锥的顶点到底面圆心的距离是圆锥的高（6年级下）
+  
+  圆锥的**轴截面**指过圆锥顶点和底面圆心的截面（9年级下）
+  
+  圆锥可以看做将一个直角三角形绕它的一条直角边（AC）旋转一周，它的其余各边所成的面围成一个几何体。直角边BC 旋转所成的面就是圆锥的**底面**，斜边AB 旋转所成的面就是圆锥的**侧面**，斜边AB 不论转动到哪一个位置，都叫做圆锥的**母线**（9年级下）
+  
+- 棱柱（9年级下）
 
+  棱柱是特殊的几何体，分为**直棱柱**和**斜棱柱**。目前只讨论直棱柱
+  
+  直棱柱的上下底面可以是各种多边形，但是全等，侧面都是矩形。（长方体、立方体都是直四棱柱）
 
+圆柱、圆锥等简单**旋转体**（9年级下）
 
 
 ##### 表面积
@@ -36,6 +48,7 @@
 长方体或者正方体6个面的面积之和，叫作它的**表面积**（5年级下）
 
 - 圆柱的表面积 = 圆柱的侧面积 + 两个底面的面积；圆柱的侧面积 = 底面周长 x 高（6年级下）
+- 圆锥的侧面积 $S_侧 = \pi rl$ ; 侧面展开图扇形的圆心角度数：$θ = \frac{r}{l} \cdot 360 °$
 
 ##### 体积
 
@@ -51,9 +64,36 @@
 
 
 
-#### 三视图
+### 三视图
 
 简单立体的三视图（上面、右面、前面）(1年级下)
 
 前面看，上面看，左面看（4年级下）
 
+
+
+#### 投影（9年级下）
+
+物体在光线的照射下，在某个平面内形成的影子叫做**投影**，此时的光线叫做**投射线**，投影所在的平面叫做**投影面**。
+
+由平面的投射线所形成的投影叫做**平行投影**
+
+在平行投影中，如果投射线垂直于投影面，那么这种投影就称为**正投影**。常用不同方向上的正投影来表达物体的形状和大小：水平投影面（顶部向下）、正投影面（正面）、侧投影面（侧面）。通过把从左向右的侧投影面向右旋转90度，把水平投影面向下旋转90度，使三个正投影处于同一平面内，组成**三视图**。物体在正投影面上的正投影叫作**主视图**，在水平投影面上的正投影叫作**俯视图**，在侧投影面上的正投影叫作**左视图**，它们合称三视图。
+
+> 没有特别说明的情况下，画三视图的主视方向可自选。但一般讲求易读易画
+
+> 立体图的$45^\circ$直角画法
+
+- 主视图和俯视图反应物体左右方向的尺寸，通常称为“长对正”；主视图和左视图...上下...，..."高平齐"；俯视图和左视图...前后...，...“宽相等”
+
+
+
+由同一点出发的投射线所形成的投影叫作**中心投影**
+
+#### 表面展开图（9年级下）
+
+将几何体沿着某些棱“剪开”，并使各个面连在一起，铺平所得到的平面图形称为几何体的**表面展开图**
+
+- 立方体的表面展开图
+- 圆柱的表面展开图：沿圆柱的任意一条母线（MN）把圆柱的侧面“剪开”铺平，就得到了圆柱的侧面展开图。这个侧面是一个矩形，其一条边等于圆柱的母线长，另一条边等于底面圆的周长。
+- 圆锥体的表面展开图 
